# Mandelbrot_Cpp_Final

./: .gitignore  CMakeLists.txt  Colorization.cpp  InsideColor.h  Mandelbrot.cpp  NormalMap.cpp  PPM.cpp  README.md  Shading.h  Striping.cpp  Striping.h  ThreadPool.cpp  ThreadPool.h  UnboundedQueue.h  main.cpp
Docs/: C++ Project Proposal [Original].md
doxygen/: Doxyfile
doxygen/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _colorization_8cpp.html  _colorization_8cpp__incl.map  _colorization_8cpp__incl.md5  _colorization_8cpp_source.html  _colorization_8h.html  _colorization_8h__dep__incl.map  _colorization_8h__dep__incl.md5  _colorization_8h__incl.map  _colorization_8h__incl.md5  _colorization_8h_source.html  _inside_color_8cpp.html  _inside_color_8cpp__incl.map  _inside_color_8cpp__incl.md5  _inside_color_8cpp_source.html  _inside_color_8h.html  _inside_color_8h__dep__incl.map  _inside_color_8h__dep__incl.md5  _inside_color_8h__incl.map  _inside_color_8h__incl.md5  _inside_color_8h_source.html  _line_color_8cpp.html  _line_color_8cpp__incl.map  _line_color_8cpp__incl.md5  _line_color_8cpp_source.html  _line_color_8h.html  _line_color_8h__dep__incl.map  _line_color_8h__dep__incl.md5  _line_color_8h__incl.map  _line_color_8h__incl.md5  _line_color_8h_source.html  _mandelbrot_8cpp.html  _mandelbrot_8cpp.js  _mandelbrot_8cpp__incl.map  _mandelbrot_8cpp__incl.md5  _mandelbrot_8cpp_source.html  _mandelbrot_8h.html  (+277 more)
doxygen/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_compiler_id_8c_source.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_c_x_x_compiler_id_8cpp_source.tex  _colorization_8cpp.tex  _colorization_8cpp__incl.md5  _colorization_8cpp_source.tex  _colorization_8h.tex  _colorization_8h__dep__incl.md5  _colorization_8h__incl.md5  _colorization_8h_source.tex  _inside_color_8cpp.tex  _inside_color_8cpp__incl.md5  _inside_color_8cpp_source.tex  _inside_color_8h.tex  (+157 more)
output/: test.pgm  testArray_1280.pgm  test_1280.pgm
src/: Colorization.h  InsideColor.cpp  LineColor.cpp  LineColor.h  Mandelbrot.h  Neumorphic.cpp  Neumorphic.h  NormalMap.h  PPM.cpp  PPM.h  Shading.cpp  ThreadPoolTest.cpp  main.cpp
(+80 files in other folders)
